# RP

./: CMakeLists.txt  README.md  package.xml
include/arm_sim/: kinematics.hpp  trajectories.hpp
install/: local_setup.sh  setup.sh
log/: latest_build
src/: arm_node.cpp  kinematics.cpp
urdf/: 2R_planar.urdf
ws/arm_sim/config/: 2R_planar.json  3R.json  visualizer.rviz
ws/arm_sim/launch/: arm_full_launch.py  arm_node_launch.py  arm_rviz_launch.py
ws/arm_sim/src/: arm_node.cpp  kinematics.cpp  trajectories.cpp
ws/arm_sim/urdf/: 3R.urdf
ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws/install/arm_sim/lib/arm_sim/: arm_node
ws/install/arm_sim/share/ament_index/resource_index/package_run_dependencies/: arm_sim
ws/install/arm_sim/share/ament_index/resource_index/parent_prefix_path/: arm_sim
ws/install/arm_sim/share/arm_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws/install/arm_sim/share/arm_sim/cmake/: arm_simConfig-version.cmake  arm_simConfig.cmake
ws/install/arm_sim/share/arm_sim/config/: 2R.json  2R_planar.json  2R_planar.rviz  3R.json  dh_config.json  visualizer.rviz
ws/install/arm_sim/share/arm_sim/environment/: ament_prefix_path.dsv  ament_prefix_path.sh  path.dsv  path.sh
ws/install/arm_sim/share/arm_sim/launch/: arm_full_launch.py  arm_node_launch.py  arm_rviz_launch.py
ws/install/arm_sim/share/arm_sim/urdf/: 2R.urdf  2R_planar.urdf  3R.urdf
ws/log/: latest_build
